fix loading mask z-index

--- a/src/component/loading/style.less
+++ b/src/component/loading/style.less
@@ -80,7 +80,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    z-index: 8000;
+    z-index: 90;
   }
 
   .gm-loading-position {
